--- a/src/components/InputPanel.css
+++ b/src/components/InputPanel.css
@@ -5,6 +5,8 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 350px;
+  margin-right: 20px;
+  height: fit-content;
 }
 
 .input-panel h2 {
@@ -51,4 +53,13 @@
 .input-group input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+/* Responsive adjustments */
+@media (max-width: 992px) {
+  .input-panel {
+    max-width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
